shared/go/parsers/generated/zfs/zpoolstatus/zpoolstatus_parser.go
// Code generated from /home/oleksiybondar/Documents/development/lite-nas/shared/go/parsers/zfs/status/grammar/ZpoolStatus.g4 by ANTLR 4.13.2. DO NOT EDIT.

package zpoolstatus // ZpoolStatus
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var (
	_ = fmt.Printf
	_ = strconv.Itoa
	_ = sync.Once{}
)

type ZpoolStatusParser struct {
	*antlr.BaseParser
}

var ZpoolStatusParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func zpoolstatusParserInit() {
	staticData := &ZpoolStatusParserStaticData
	staticData.LiteralNames = []string{
		"", "'pool:'", "'state:'", "'scan:'", "'config:'", "'errors:'", "'status:'",
		"'action:'", "'see:'",
	}
	staticData.SymbolicNames = []string{
		"", "POOL_KV", "STATE_KV", "SCAN_KV", "CONFIG_KV", "ERRORS_KV", "STATUS_KV",
		"ACTION_KV", "SEE_KV", "ATOM", "WS", "NL",
	}
	staticData.RuleNames = []string{
		"document", "leadingBlankLines", "poolBlock", "trailingBlankLines",
		"metadataSection", "metadataLine", "poolLine", "stateLine", "scanLine",
		"statusLine", "actionLine", "seeLine", "configSection", "configHeaderLine",
		"configRowLine", "errorsLine", "textLine", "textAtom", "headerAtom",
		"rowAtom",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ZpoolStatusParserInit initializes any static state used to implement ZpoolStatusParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewZpoolStatusParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ZpoolStatusParserInit() {
	staticData := &ZpoolStatusParserStaticData
	staticData.once.Do(zpoolstatusParserInit)
}

// NewZpoolStatusParser produces a new parser instance for the optional input antlr.TokenStream.
func NewZpoolStatusParser(input antlr.TokenStream) *ZpoolStatusParser {
	ZpoolStatusParserInit()
	this := new(ZpoolStatusParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ZpoolStatusParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "ZpoolStatus.g4"

	return this
}

// ZpoolStatusParser tokens.
const (
	ZpoolStatusParserEOF       = antlr.TokenEOF
	ZpoolStatusParserPOOL_KV   = 1
	ZpoolStatusParserSTATE_KV  = 2
	ZpoolStatusParserSCAN_KV   = 3
	ZpoolStatusParserCONFIG_KV = 4
	ZpoolStatusParserERRORS_KV = 5
	ZpoolStatusParserSTATUS_KV = 6
	ZpoolStatusParserACTION_KV = 7
	ZpoolStatusParserSEE_KV    = 8
	ZpoolStatusParserATOM      = 9
	ZpoolStatusParserWS        = 10
	ZpoolStatusParserNL        = 11
)

// ZpoolStatusParser rules.
const (
	ZpoolStatusParserRULE_document           = 0
	ZpoolStatusParserRULE_leadingBlankLines  = 1
	ZpoolStatusParserRULE_poolBlock          = 2
	ZpoolStatusParserRULE_trailingBlankLines = 3
	ZpoolStatusParserRULE_metadataSection    = 4
	ZpoolStatusParserRULE_metadataLine       = 5
	ZpoolStatusParserRULE_poolLine           = 6
	ZpoolStatusParserRULE_stateLine          = 7
	ZpoolStatusParserRULE_scanLine           = 8
	ZpoolStatusParserRULE_statusLine         = 9
	ZpoolStatusParserRULE_actionLine         = 10
	ZpoolStatusParserRULE_seeLine            = 11
	ZpoolStatusParserRULE_configSection      = 12
	ZpoolStatusParserRULE_configHeaderLine   = 13
	ZpoolStatusParserRULE_configRowLine      = 14
	ZpoolStatusParserRULE_errorsLine         = 15
	ZpoolStatusParserRULE_textLine           = 16
	ZpoolStatusParserRULE_textAtom           = 17
	ZpoolStatusParserRULE_headerAtom         = 18
	ZpoolStatusParserRULE_rowAtom            = 19
)

// IDocumentContext is an interface to support dynamic dispatch.
type IDocumentContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	LeadingBlankLines() ILeadingBlankLinesContext
	AllPoolBlock() []IPoolBlockContext
	PoolBlock(i int) IPoolBlockContext

	// IsDocumentContext differentiates from other interfaces.
	IsDocumentContext()
}

type DocumentContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDocumentContext() *DocumentContext {
	p := new(DocumentContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_document
	return p
}

func InitEmptyDocumentContext(p *DocumentContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_document
}

func (*DocumentContext) IsDocumentContext() {}

func NewDocumentContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DocumentContext {
	p := new(DocumentContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZpoolStatusParserRULE_document

	return p
}

func (s *DocumentContext) GetParser() antlr.Parser { return s.parser }

func (s *DocumentContext) EOF() antlr.TerminalNode {
	return s.GetToken(ZpoolStatusParserEOF, 0)
}

func (s *DocumentContext) LeadingBlankLines() ILeadingBlankLinesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILeadingBlankLinesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILeadingBlankLinesContext)
}

func (s *DocumentContext) AllPoolBlock() []IPoolBlockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IPoolBlockContext); ok {
			len++
		}
	}

	tst := make([]IPoolBlockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IPoolBlockContext); ok {
			tst[i] = t.(IPoolBlockContext)
			i++
		}
	}

	return tst
}

func (s *DocumentContext) PoolBlock(i int) IPoolBlockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPoolBlockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPoolBlockContext)
}

func (s *DocumentContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DocumentContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DocumentContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.EnterDocument(s)
	}
}

func (s *DocumentContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.ExitDocument(s)
	}
}

func (p *ZpoolStatusParser) Document() (localctx IDocumentContext) {
	localctx = NewDocumentContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ZpoolStatusParserRULE_document)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(41)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == ZpoolStatusParserNL {
		{
			p.SetState(40)
			p.LeadingBlankLines()
		}
	}
	p.SetState(44)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == ZpoolStatusParserPOOL_KV {
		{
			p.SetState(43)
			p.PoolBlock()
		}

		p.SetState(46)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(48)
		p.Match(ZpoolStatusParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ILeadingBlankLinesContext is an interface to support dynamic dispatch.
type ILeadingBlankLinesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllNL() []antlr.TerminalNode
	NL(i int) antlr.TerminalNode

	// IsLeadingBlankLinesContext differentiates from other interfaces.
	IsLeadingBlankLinesContext()
}

type LeadingBlankLinesContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLeadingBlankLinesContext() *LeadingBlankLinesContext {
	p := new(LeadingBlankLinesContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_leadingBlankLines
	return p
}

func InitEmptyLeadingBlankLinesContext(p *LeadingBlankLinesContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_leadingBlankLines
}

func (*LeadingBlankLinesContext) IsLeadingBlankLinesContext() {}

func NewLeadingBlankLinesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LeadingBlankLinesContext {
	p := new(LeadingBlankLinesContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZpoolStatusParserRULE_leadingBlankLines

	return p
}

func (s *LeadingBlankLinesContext) GetParser() antlr.Parser { return s.parser }

func (s *LeadingBlankLinesContext) AllNL() []antlr.TerminalNode {
	return s.GetTokens(ZpoolStatusParserNL)
}

func (s *LeadingBlankLinesContext) NL(i int) antlr.TerminalNode {
	return s.GetToken(ZpoolStatusParserNL, i)
}

func (s *LeadingBlankLinesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LeadingBlankLinesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LeadingBlankLinesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.EnterLeadingBlankLines(s)
	}
}

func (s *LeadingBlankLinesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.ExitLeadingBlankLines(s)
	}
}

func (p *ZpoolStatusParser) LeadingBlankLines() (localctx ILeadingBlankLinesContext) {
	localctx = NewLeadingBlankLinesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ZpoolStatusParserRULE_leadingBlankLines)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(51)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == ZpoolStatusParserNL {
		{
			p.SetState(50)
			p.Match(ZpoolStatusParserNL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(53)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPoolBlockContext is an interface to support dynamic dispatch.
type IPoolBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PoolLine() IPoolLineContext
	ConfigSection() IConfigSectionContext
	ErrorsLine() IErrorsLineContext
	MetadataSection() IMetadataSectionContext
	AllNL() []antlr.TerminalNode
	NL(i int) antlr.TerminalNode
	TrailingBlankLines() ITrailingBlankLinesContext

	// IsPoolBlockContext differentiates from other interfaces.
	IsPoolBlockContext()
}

type PoolBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPoolBlockContext() *PoolBlockContext {
	p := new(PoolBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_poolBlock
	return p
}

func InitEmptyPoolBlockContext(p *PoolBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_poolBlock
}

func (*PoolBlockContext) IsPoolBlockContext() {}

func NewPoolBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PoolBlockContext {
	p := new(PoolBlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZpoolStatusParserRULE_poolBlock

	return p
}

func (s *PoolBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *PoolBlockContext) PoolLine() IPoolLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPoolLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPoolLineContext)
}

func (s *PoolBlockContext) ConfigSection() IConfigSectionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConfigSectionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConfigSectionContext)
}

func (s *PoolBlockContext) ErrorsLine() IErrorsLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IErrorsLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IErrorsLineContext)
}

func (s *PoolBlockContext) MetadataSection() IMetadataSectionContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetadataSectionContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetadataSectionContext)
}

func (s *PoolBlockContext) AllNL() []antlr.TerminalNode {
	return s.GetTokens(ZpoolStatusParserNL)
}

func (s *PoolBlockContext) NL(i int) antlr.TerminalNode {
	return s.GetToken(ZpoolStatusParserNL, i)
}

func (s *PoolBlockContext) TrailingBlankLines() ITrailingBlankLinesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITrailingBlankLinesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITrailingBlankLinesContext)
}

func (s *PoolBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PoolBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PoolBlockContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.EnterPoolBlock(s)
	}
}

func (s *PoolBlockContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.ExitPoolBlock(s)
	}
}

func (p *ZpoolStatusParser) PoolBlock() (localctx IPoolBlockContext) {
	localctx = NewPoolBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ZpoolStatusParserRULE_poolBlock)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(55)
		p.PoolLine()
	}
	p.SetState(57)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&460) != 0 {
		{
			p.SetState(56)
			p.MetadataSection()
		}
	}
	{
		p.SetState(59)
		p.ConfigSection()
	}
	p.SetState(63)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == ZpoolStatusParserNL {
		{
			p.SetState(60)
			p.Match(ZpoolStatusParserNL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(65)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(66)
		p.ErrorsLine()
	}
	p.SetState(68)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == ZpoolStatusParserNL {
		{
			p.SetState(67)
			p.TrailingBlankLines()
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITrailingBlankLinesContext is an interface to support dynamic dispatch.
type ITrailingBlankLinesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllNL() []antlr.TerminalNode
	NL(i int) antlr.TerminalNode

	// IsTrailingBlankLinesContext differentiates from other interfaces.
	IsTrailingBlankLinesContext()
}

type TrailingBlankLinesContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTrailingBlankLinesContext() *TrailingBlankLinesContext {
	p := new(TrailingBlankLinesContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_trailingBlankLines
	return p
}

func InitEmptyTrailingBlankLinesContext(p *TrailingBlankLinesContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_trailingBlankLines
}

func (*TrailingBlankLinesContext) IsTrailingBlankLinesContext() {}

func NewTrailingBlankLinesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TrailingBlankLinesContext {
	p := new(TrailingBlankLinesContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZpoolStatusParserRULE_trailingBlankLines

	return p
}

func (s *TrailingBlankLinesContext) GetParser() antlr.Parser { return s.parser }

func (s *TrailingBlankLinesContext) AllNL() []antlr.TerminalNode {
	return s.GetTokens(ZpoolStatusParserNL)
}

func (s *TrailingBlankLinesContext) NL(i int) antlr.TerminalNode {
	return s.GetToken(ZpoolStatusParserNL, i)
}

func (s *TrailingBlankLinesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TrailingBlankLinesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TrailingBlankLinesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.EnterTrailingBlankLines(s)
	}
}

func (s *TrailingBlankLinesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.ExitTrailingBlankLines(s)
	}
}

func (p *ZpoolStatusParser) TrailingBlankLines() (localctx ITrailingBlankLinesContext) {
	localctx = NewTrailingBlankLinesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ZpoolStatusParserRULE_trailingBlankLines)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(71)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == ZpoolStatusParserNL {
		{
			p.SetState(70)
			p.Match(ZpoolStatusParserNL)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(73)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMetadataSectionContext is an interface to support dynamic dispatch.
type IMetadataSectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllMetadataLine() []IMetadataLineContext
	MetadataLine(i int) IMetadataLineContext

	// IsMetadataSectionContext differentiates from other interfaces.
	IsMetadataSectionContext()
}

type MetadataSectionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMetadataSectionContext() *MetadataSectionContext {
	p := new(MetadataSectionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_metadataSection
	return p
}

func InitEmptyMetadataSectionContext(p *MetadataSectionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_metadataSection
}

func (*MetadataSectionContext) IsMetadataSectionContext() {}

func NewMetadataSectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MetadataSectionContext {
	p := new(MetadataSectionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZpoolStatusParserRULE_metadataSection

	return p
}

func (s *MetadataSectionContext) GetParser() antlr.Parser { return s.parser }

func (s *MetadataSectionContext) AllMetadataLine() []IMetadataLineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IMetadataLineContext); ok {
			len++
		}
	}

	tst := make([]IMetadataLineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IMetadataLineContext); ok {
			tst[i] = t.(IMetadataLineContext)
			i++
		}
	}

	return tst
}

func (s *MetadataSectionContext) MetadataLine(i int) IMetadataLineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IMetadataLineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IMetadataLineContext)
}

func (s *MetadataSectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MetadataSectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *MetadataSectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.EnterMetadataSection(s)
	}
}

func (s *MetadataSectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(ZpoolStatusListener); ok {
		listenerT.ExitMetadataSection(s)
	}
}

func (p *ZpoolStatusParser) MetadataSection() (localctx IMetadataSectionContext) {
	localctx = NewMetadataSectionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ZpoolStatusParserRULE_metadataSection)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&460) != 0) {
		{
			p.SetState(75)
			p.MetadataLine()
		}

		p.SetState(78)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IMetadataLineContext is an interface to support dynamic dispatch.
type IMetadataLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	StateLine() IStateLineContext
	ScanLine() IScanLineContext
	StatusLine() IStatusLineContext
	ActionLine() IActionLineContext
	SeeLine() ISeeLineContext

	// IsMetadataLineContext differentiates from other interfaces.
	IsMetadataLineContext()
}

type MetadataLineContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyMetadataLineContext() *MetadataLineContext {
	p := new(MetadataLineContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_metadataLine
	return p
}

func InitEmptyMetadataLineContext(p *MetadataLineContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ZpoolStatusParserRULE_metadataLine
}

func (*MetadataLineContext) IsMetadataLineContext() {}

func NewMetadataLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *MetadataLineContext {
	p := new(MetadataLineContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ZpoolStatusParserRULE_metadataLine

	return p
}

func (s *MetadataLineContext) GetParser() antlr.Parser { return s.parser }

func (s *MetadataLineContext) StateLine() IStateLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStateLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStateLineContext)
}

func (s *MetadataLineContext) ScanLine() IScanLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IScanLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IScanLineContext)
}

func (s *MetadataLineContext) StatusLine() IStatusLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatusLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatusLineContext)
}

func (s *MetadataLineContext) ActionLine() IActionLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IActionLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IActionLineContext)
}

func (s *MetadataLineContext) SeeLine() ISeeLineContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ISeeLineContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ISeeLineContext)
}

func (s *MetadataLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *MetadataLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}
